// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en <GifGrid /> debe de mostrar items cuando se cargan imagenes useFetchGifs 1`] = `
<Fragment>
  <h3
    className="cat animate__animated animate__fadeIn"
  >
     
    Hola mundo
     
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      title="cualquiier cosa"
      url="https://localhost"
    />
    <GifGridItem
      id="123"
      key="123"
      title="cualquiier cosa 2"
      url="https://localhost2"
    />
  </div>
</Fragment>
`;

exports[`Pruebas en <GifGrid /> debe mostrarse correctamente (snapshot)  1`] = `
<Fragment>
  <h3
    className="cat animate__animated animate__fadeIn"
  >
     
    Hola mundo
     
  </h3>
  <p
    className="animate__animated animate__flash"
  >
    Loading
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;
